--- a/website/blog/2016-03-11-blog-post.md
+++ b/website/blog/2016-03-11-blog-post.md
@@ -1,1 +1,7 @@
-Deneme
+---
+title: Headless Chrome Kullanımı
+author: Caner Basat
+authorURL: http://medium.com/@canerbasat
+authorFBID: 1045077415
+---
+sss
